--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
     <header class="banner-hero">
         <a href="#offer">
             <picture>
-                <source media="(min-width:768px)" srcset="assets/banner_desk.webp" type="image/webp">
-                <source media="(min-width:320px)" srcset="assets/banner_mob.webp" type="image/webp">
-                <img src="assets/banner_desk.webp" alt="Banner do site Travesseiro Altura regulável" width="1920" height="600" type="image/webp">
+                <source media="(min-width:768px)" srcset="assets/banner_desk-2.webp" type="image/webp">
+                <source media="(min-width:320px)" srcset="assets/banner_mob-2.webp" type="image/webp">
+                <img src="assets/banner_desk-2.webp" alt="Banner do site Travesseiro Altura regulável" width="1920" height="612" type="image/webp">
             </picture>
         </a>
     </header>
@@ -71,7 +71,7 @@
         <section class="s-chamada">
             <div class="container">
                 <h2>
-                    Você passa 33% da sua vida dormindo e proporcionar-se uma noite especial com um <b>sono profundo,</b>  revigorante e totalmente <b>relaxante agora é possível.</b>
+                    1/3 da sua vida você passa dormindo. Por isso, fazer valer a pena cada minuto de sono, garante qualidade e vida longa para você!
                 </h2>
             </div>
         </section>
@@ -79,7 +79,7 @@
         <section class="s-pain">
             <div class="container">
                 <header class="pain_title">
-                    <h2> <b>Se você sofre</b>  com alguma dessas dores.</h2>
+                    <h2> <b>Se você sofre</b> com alguma desses problemas</h2>
                     <h3>O travesseiro Regulável da RVFIT é <b>para você!</b> </h3>
                 </header>
                 <ul class="pain-content">
@@ -262,11 +262,16 @@
                 <p>Dúvidas? entre em contato conosco: <a href="mailto:atendimento@rvfit.com.br">atendimento@rvfit.com.br</a>  ou <a href="https://web.whatsapp.com/send?phone=55%2011%2094973-7100&text=Ol%C3%A1%2C+tenho+algumas+d%C3%BAvidas" target="_blank" rel="noopener noreferrer"></a> (11) 94973-7100</p>
                 <nav>
                     <ul>
-                        <li> <a href="termos.html" target="_blank" rel="noopener noreferrer">Politica de privacidade</a> </li>
-                        <li><a href="politica.html" target="_blank" rel="noopener noreferrer">Termos de uso</a> </li>
+                        <li> <a href="politica.html" target="_blank" rel="noopener noreferrer">Politica de privacidade</a> </li>
+                        <li><a href="termos.html" target="_blank" rel="noopener noreferrer">Termos de uso</a> </li>
                     </ul>
                 </nav>
                 <p>Copyright 2022 – RVFIT LTDA CNPJ:12.416.634/0001-09 |Todos os Direitos Reservados </p>
+            </div>
+
+            <div class="whatsapp">
+                <a href="https://api.whatsapp.com/send?phone=5511949737100&text=Ol%C3%A1%20estou%20na%20p%C3%A1gina%20do%20travesseiro%20regul%C3%A1vel%20pode%20me%20ajudar%3F" target="_blank" rel="noopener noreferrer"><img src="assets/whatsapp.svg" alt="icone do whatsapp"></a>
+                
             </div>
     </footer>
 
