--- a/404.html
+++ b/404.html
@@ -22,6 +22,15 @@
 
 </head>
 <body>
-    
+    <main>
+        <section class="s-404">
+            <div class="container">
+                <h2>404</h2>
+                <h3>A página que você esta tentando acessar não existe</h3>
+
+                <a href="index.html"> <button> Ir para o site</button></a>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
