--- a/obrigado.html
+++ b/obrigado.html
@@ -22,6 +22,46 @@
 
 </head>
 <body>
-    
+    <section class="s-banner-obrigado">
+        <div class="container">
+            <div class="content_congratulations">
+                <h2>Parabéns!</h2>
+                <h3>Seu pedido foi aprovado com sucesso!</h3>
+                <p>
+                    No prazo de 24h o seu pedido será enviado pelos correios e você receberá o código de rastreio!
+                </p>
+            </div>
+            <div class="content_image">
+                <img loading="lazy" src="assets/travesseiro-tec.webp" alt="" width="638" height="526">
+            </div>
+        </div>
+    </section>
+    <main>
+        <section>
+            <div class="container">
+                <h2>AINDA FICOU ALGUMA DÚVIDA?</h2>
+                <h3> Fale com a gente clicando no botão logo abaixo!</h3>
+                <a href="https://api.whatsapp.com/send?phone=5511948444154&text=Ol%C3%A1%2C%20estou%20na%20p%C3%A1gina%20do%20Alcalinizador%20Rv%20Water%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es%2C%20pode%20me%20ajudar%3F"><button>Falar no whatsapp</button></a>
+            </div>
+        </section>
+    </main>
 </body>
+<footer>
+    <div class="container">
+        <svg class="logo"><use xlink:href="assets/i.svg#logo"></use></svg>
+        <p>Dúvidas? entre em contato conosco: <a href="mailto:atendimento@rvfit.com.br">atendimento@rvfit.com.br</a>  ou <a href="https://api.whatsapp.com/send?phone=5511949737100&text=Ol%C3%A1%20estou%20na%20p%C3%A1gina%20do%20travesseiro%20regul%C3%A1vel%20pode%20me%20ajudar%3F" target="_blank" rel="noopener noreferrer" target="_blank" rel="noopener noreferrer"></a> (11) 94973-7100</p>
+        <nav>
+            <ul>
+                <li> <a href="politica.html" target="_blank" rel="noopener noreferrer">Politica de privacidade</a> </li>
+                <li><a href="termos.html" target="_blank" rel="noopener noreferrer">Termos de uso</a> </li>
+            </ul>
+        </nav>
+        <p>Copyright 2022 – RVFIT LTDA CNPJ:12.416.634/0001-09 |Todos os Direitos Reservados </p>
+    </div>
+
+    <div class="whatsapp">
+        <a href="https://api.whatsapp.com/send?phone=5511949737100&text=Ol%C3%A1%20estou%20na%20p%C3%A1gina%20do%20travesseiro%20regul%C3%A1vel%20pode%20me%20ajudar%3F" target="_blank" rel="noopener noreferrer"><img src="assets/whatsapp.svg" alt="icone do whatsapp"></a>
+        
+    </div>
+</footer>
 </html>
