ajuste das páginas extras

--- a/politica.html
+++ b/politica.html
@@ -26,7 +26,7 @@
 </head>
 <body>
     <header>
-        section>
+        <section>
             <div class="container">
 
                 <h2>Politica de privacidade - Travesseiro com altura regulável</h2>
