--- a/boleto.html
+++ b/boleto.html
@@ -37,11 +37,11 @@
         </div>
     </section>
     <main>
-        <section>
+        <section class="s-boleto">
             <div class="container">
                 <h2>AINDA FICOU ALGUMA DÚVIDA?</h2>
                 <h3> Fale com a gente clicando no botão logo abaixo!</h3>
-                <a href="https://api.whatsapp.com/send?phone=5511948444154&text=Ol%C3%A1%2C%20estou%20na%20p%C3%A1gina%20do%20Alcalinizador%20Rv%20Water%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es%2C%20pode%20me%20ajudar%3F"><button>Falar no whatsapp</button></a>
+                <a href="https://api.whatsapp.com/send?phone=5511948444154&text=Ol%C3%A1%2C%20estou%20na%20p%C3%A1gina%20do%20Alcalinizador%20Rv%20Water%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es%2C%20pode%20me%20ajudar%3F" target="_blank"><button>Falar no whatsapp</button></a>
             </div>
         </section>
     </main>
