--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
     <header class="banner-hero">
         <a href="#offer">
             <picture>
-                <source media="(min-width:768px)" srcset="assets/banner_desk.webp" type="image/webp">
-                <source media="(min-width:320px)" srcset="assets/banner_mob.webp" type="image/webp">
-                <img src="assets/banner_desk.webp" alt="Banner do site Travesseiro Altura regulável" width="1920" height="612" type="image/webp">
+                <source media="(min-width:768px)" srcset="assets/banner-desk-daddy.webp" type="image/webp">
+                <source media="(min-width:320px)" srcset="assets/banner-mob-daddy.webp" type="image/webp">
+                <img src="assets/banner-desk-daddy.png" alt="Banner do site Travesseiro Altura regulável" width="auto" type="image/png">
             </picture>
         </a>
     </header>
@@ -212,9 +212,9 @@
                     <h3>Temos uma <b> oferta imperdível</b> para você!</h3>
                 </div> 
                 <ul class="content-offer" id="offer">
-                        <li><a href="https://app.monetizze.com.br/checkout/DCB167371" target="_blank" rel="noopener noreferrer"><img src="assets/plano-1.webp" alt="preço do travesseiro regulável" width="280" height="517"></a></li>
-                        <li><a href="https://app.monetizze.com.br/checkout/DRB167372" target="_blank" rel="noopener noreferrer"><img src="assets/plano-2.webp" alt="preço do travesseiro regulável" width="280" height="517"></a></li>
-                        <li><a href="https://app.monetizze.com.br/checkout/DDV172628" target="_blank" rel="noopener noreferrer"><img src="assets/plano-3.webp" alt="preço do travesseiro regulável" width="280" height="517"></a></li>
+                        <li><a href="https://app.monetizze.com.br/checkout/DCB167371" target="_blank" rel="noopener noreferrer"><img src="assets/1-travesseiro.webp" alt="preço do travesseiro regulável" width="280" height="517"></a></li>
+                        <li><a href="https://app.monetizze.com.br/checkout/DRB167372" target="_blank" rel="noopener noreferrer"><img src="assets/2-travesseiros.webp" alt="preço do travesseiro regulável" width="280" height="517"></a></li>
+                        <li><a href="https://app.monetizze.com.br/checkout/DDV172628" target="_blank" rel="noopener noreferrer"><img src="assets/3-travesseiros.webp" alt="preço do travesseiro regulável" width="280" height="517"></a></li>
                 </ul>
                 <img class="selos" loading="lazy" src="assets/selos.webp" alt="selos de garantia" width="410" height="37">   
             </div>
